--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <div data-role="content">
 
-<script src="http://l.yimg.com/a/i/us/pps/listbadge_1.6.js">{"pipe_id":"dffc304a91b38aac27dc2ab849bf7f30","_btype":"list"}</script>
+<script src="http://l.yimg.com/a/i/us/pps/listbadge_1.6.js">{"pipe_id":"dffc304a91b38aac27dc2ab849bf7f30","_btype":"list","width":"100%","height":"200"}</script>
 </div>
 <div data-role="footer" data-id="footer" data-position="fixed" data-tap-toggle="false">
 	<div data-role="navbar">
